# rust_examples

ai_asker_cli/: Cargo.toml  README.md
ai_asker_cli/examples/: faked_answers.rs  open_ai_cli.rs
ai_asker_cli/src/: cli.rs  lib.rs
ai_asker_cli/src/adapters/: mod.rs  openai_asker.rs
ai_asker_cli/src/domain/: asker.rs  mod.rs
ai_asker_cli/src/openai_client/: mod.rs
ai_asker_cli/src/utils/: mod.rs
algo/src/: box_example.rs  hanoi.rs  hanoi_state_machine.rs  main.rs  natural_numbers.rs  print_square_sorted.rs  rc_example.rs  square_sorted.rs
algo/src/backtracking/: n_queens.rs
auth-service/: .env  Cargo.toml  docker-compose.yaml
auth-service/migrations/: 20220901015036_create-tables.sql
auth-service/src/: main.rs
auth-service/src/config/: crypto.rs  mod.rs
auth-service/src/db/: user.rs
auth-service/src/handlers/: hello.rs  mod.rs  user.rs
auth-service/src/models/: user.rs
design_patterns/src/: lib.rs
leetcode/src/: e0001_two_sum.rs  e0002_add_two_numbers.rs  e0003_longest_substring_without_repeating_characters.rs  e0004_median_of_two_sorted_arrays.rs  e0041_first_missing_positive.rs  e0053_maximun_subarray.rs  e0083_remove_duplicates_from_sorted_list.rs  e0120_triangle.rs  e0912_sort_an_array.rs  e1534_count_good_triplets.rs  lib.rs
leetcode/src/helpers/: double_linked_list.rs  list_node_box.rs  mod.rs
ndarray_example/: Cargo.toml
ndarray_example/src/: main.rs
string-utils/: .gitignore  Cargo.toml  string-utils.wai
string-utils/nodejs_example/: index.js  package.json
string-utils/python_example/: example.py
string-utils/src/: lib.rs
wasm-hello/: Cargo.toml  Makefile  main.ts
wasm-hello/examples/: hello_there.rs
wasm-hello/src/: lib.rs
yrs_examples/: Cargo.toml
yrs_examples/src/: main.rs
