[package]
name = "ai_asker_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.23", features = ["full"] }
tokio-test = "^0.4"
async-trait = "^0.1"

hyper = { version = "^0.14", features = ["full"] }
hyper-tls = "^0.5"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"

spinners = "^4"

mockall = "^0"