[package]
name = "auth-service"
version = "0.1.0"
author=["kranfix"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.20.1", features = ["full"] }
config = "0.10"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
eyre = "0.4"
color-eyre = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = "0.2"
sqlx = { version="0.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono"] }
uuid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
validator_derive = "0.16"
jsonwebtoken = "8"
argonautica = { version = "0.2", features = ["simd"] }
futures = { version = "0.3", features = ["compat"] }